# bicycle-compe

./: hypothesis.md  main.py  pyproject.toml
